[tool.poetry]
name = "balerion"
version = "0.1.0"
description = "A to-do-list API, with conecepts of Onion/Clean Architecture."
authors = ["Vinicius Reis <v_reis@outlook.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
pyfiglet = "^1.0.2"
pydantic = "^2.10.2"
hypercorn = "^0.17.3"
python-decouple = "^3.8"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
loguru = "^0.7.2"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
asgiref = "^3.8.1"
flasgger = "^0.9.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
ruff = "^0.8.1"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
